# slint-player

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test.json
src/: lib.rs  main.rs
src/bili_model/: search.rs
ui/: app.slint
ui/components/: Icon.slint  Menu.slint  Player.slint
ui/modules/surrealism-ui/src/card/: card.slint
ui/modules/surrealism-ui/src/input/: input.slint
ui/modules/surrealism-ui/src/menu/: menu.slint
ui/views/: BaseView.slint  ListView.slint  SearchView.slint  main.slint
