[package]
name = "slint-player"
version = "0.1.0"
edition = "2021"
authors = ["shadowzlh <shadowzlh@foxmail.com>"]
build = "build.rs"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6.0"
i-slint-backend-winit = "1.8.0"
winit = "0.30.5"

[build-dependencies]
slint-build = "1.6.0"
